--- a/QUESTAO_03/index.html
+++ b/QUESTAO_03/index.html
@@ -17,7 +17,7 @@
         <div class="columnForm">
             <h3 class="titleForm">Mensagem:</h3>
             <form action="">
-                <input type="text" name="nName" id="iName" class="input" placeholder="Nome* |">
+                <input type="text" name="nName" id="iName" class="input" placeholder="Nome*" maxlength="30" required>
                 <input type="tel" name="nTel" id="iTel" class="input" placeholder="Telefone*">
                 <input type="email" name="nEmail" id="iEmail" class="input" placeholder="Email*">
                 <textarea name="nMessage" id="iMessage" cols="30" rows="10" class="inputTextArea" placeholder="Mensagem*"></textarea>
@@ -25,5 +25,6 @@
             </form>
         </div>
     </main>
+    <script src="js/Validate.js"></script>
 </body>
 </html>
